--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
     <div class="search-bar">
       <div class="search-bar-form">
         <mat-form-field appearance="outline" class="search-field">
-          <input type="text" matInput placeholder="Search" maxlength="100" [(ngModel)]="keyword">
+          <input type="text" matInput placeholder="Search persons by name or group" maxlength="100" [(ngModel)]="keyword">
           <button type="button" mat-mini-fab matSuffix (click)="onSearchPersonClick()">
             <mat-icon>search</mat-icon>
           </button>
